--- a/templates/base.html
+++ b/templates/base.html
@@ -235,6 +235,8 @@
   <script src="{% static 'js/bootstrap.js' %}"></script>
   <!-- custom js -->
   <script src="{% static 'js/custom.js' %}"></script>
+  
+  <script src="{% static 'js/sweetalert2.min.js' %}"></script>
 
 
 </body>
