--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
 
   <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 
+  <link href="{% static 'css/cart.css' %}" rel="stylesheet" />
+
+
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 
 </head>
@@ -60,7 +63,7 @@
                   My Account
                 </span>
               </a>
-              <a href="" class="cart-link">
+              <a href="cart/" class="cart-link">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <span>
                   Cart
@@ -235,7 +238,7 @@
   <script src="{% static 'js/bootstrap.js' %}"></script>
   <!-- custom js -->
   <script src="{% static 'js/custom.js' %}"></script>
-  
+
   <script src="{% static 'js/sweetalert2.min.js' %}"></script>
 
 
