Cart section ongoing

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
           <div class="box">
             <div class="img-box">
               <img src="{{product.product_image.url}}" alt="">
-              <a href="" class="add_cart_btn">
+              <a href="{% url 'web:add_to_cart' pk=product.pk %}" class="add_cart_btn">
                 <span>
                   Add To Cart
                 </span>
