--- a/static/css/style.css
+++ b/static/css/style.css
@@ -427,13 +427,13 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
-  padding: 15px;
+  padding: 20%;
 }
 
 .product_section .box .img-box img {
