--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,7 +27,7 @@
                 <input class="_column product-qty" id="count" value=1 name="{{cart_product.pk}}"/>
                 <button class="_btn _column product-plus" id="plus">&plus;</button>
               </div>
-              <button class="_btn entypo-trash product-remove">Remove</button>
+              <a href="{% url 'web:remove' pk=cart_product.pk %}" class="_btn entypo-trash product-remove">Remove</a>
               <input class="price product-total-price" id="total" value="0.00" readonly/>
             </div>
           </li>
