--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -78,7 +78,7 @@ h1, .sub-heading {
 .product-image {
   width: 16.663198%;
   background: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7") no-repeat center / cover transparent;
-  padding: 5%;
+  padding: 4% 1% 1% 2%;
 }
 
 /**
@@ -183,6 +183,9 @@ h1, .sub-heading {
 }
 .cart-totals-value {
   font-size: 2em;
+  width: 100%;
+  background: transparent;
+  border: 0;
 }
 ._column.checkout {
   text-align: right;
@@ -209,7 +212,7 @@ h1, .sub-heading {
   transform: translate3d(0, -100%, 0);
   opacity: 0;
 }
-img{
+.product-image--img{
   width: 100%;
   display: block;
 }
