--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,7 +14,7 @@
         {% for cart_product in cart_products %}
           <li class="_grid shopping-cart--list-item">
             <div class="_column product-image">
-              <img class="product-image--img" src="{{cart_product.product_image.url}}" alt="Item image" />
+              <img class="product-image--img image" src="{{cart_product.product_image.url}}" alt="Item image" />
             </div>
             <div class="_column product-info">
               <h4 class="product-name">{{cart_product.product_name}}</h4>
@@ -37,20 +37,20 @@
   
       <footer class="_grid cart-totals">
         <div class="_column subtotal" id="subtotalCtr">
-          <div class="cart-totals-key">Subtotal</div>
-          <div class="cart-totals-value">$0.00</div>
+          <div class="cart-totals-key" >Subtotal</div>
+          <input class="cart-totals-value" id="subtotal" value="0.00" readonly />
         </div>
         <div class="_column shipping" id="shippingCtr">
           <div class="cart-totals-key">Shipping</div>
-          <div class="cart-totals-value">$0.00</div>
+          <input class="cart-totals-value" id="shipping" value="0.00" readonly/>
         </div>
         <div class="_column taxes" id="taxesCtr">
           <div class="cart-totals-key">Taxes (6%)</div>
-          <div class="cart-totals-value">$0.00</div>
+          <input class="cart-totals-value" id="tax" value="0.00" readonly/>
         </div>
         <div class="_column total" id="totalCtr">
           <div class="cart-totals-key">Total</div>
-          <div class="cart-totals-value">$0.00</div>
+          <input class="cart-totals-value" id="grant_total" value="0.00" readonly/>
         </div>
         <div class="_column checkout">
           <button class="_btn checkout-btn entypo-forward">Checkout</button>
