--- a/templates/base.html
+++ b/templates/base.html
@@ -57,13 +57,13 @@
               </button>
             </from>
             <div class="user_option_box">
-              <a href="" class="account-link">
+              <a href="{% url 'web:user_login' %}" class="account-link">
                 <i class="fa fa-user" aria-hidden="true"></i>
                 <span>
                   My Account
                 </span>
               </a>
-              <a href="cart/" class="cart-link">
+              <a href="{% url 'web:cart' %}" class="cart-link">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <span>
                   Cart
@@ -90,19 +90,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{% url 'web:index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about/"> About</a>
+                  <a class="nav-link" href="{% url 'web:about' %}"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="product/">Products</a>
+                  <a class="nav-link" href="{% url 'web:product' %}">Products</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="why/">Why Us</a>
+                  <a class="nav-link" href="{% url 'web:why' %}">Why Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial/">Testimonial</a>
+                  <a class="nav-link" href="{% url 'web:testimonial' %}">Testimonial</a>
                 </li>
               </ul>
             </div>
@@ -159,27 +159,27 @@
             </h5>
             <ul>
               <li>
-                <a href="index.html">
+                <a href="{% url 'web:index' %}">
                   Home
                 </a>
               </li>
               <li>
-                <a href="about.html">
+                <a href="{% url 'web:about' %}">
                   About
                 </a>
               </li>
               <li>
-                <a href="product.html">
+                <a href="{% url 'web:product' %}">
                   Products
                 </a>
               </li>
               <li>
-                <a href="why.html">
+                <a href="{% url 'web:why' %}">
                   Why Us
                 </a>
               </li>
               <li>
-                <a href="testimonial.html">
+                <a href="{% url 'web:testimonial' %}">
                   Testimonial
                 </a>
               </li>
