User section | login

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,11 @@
                   Cart
                 </span>
               </a>
+              <a href="{% url 'web:user_logout' %}" class="cart-link">
+                <span>
+                  Logout
+                </span>
+              </a>
             </div>
           </div>
 
