--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,7 +24,7 @@
 
     <a href="{% url 'web:user_signup' %}" class="active log"> sign up </a>
 </div>
-  <form action="{% url 'web:add_signup_user' %}" method="post" class="signup">
+  <form action="{% url 'web:verify_otp' %}" method="post" >
       {% csrf_token %}
 
     {{form.username}}
